--- a/index.html
+++ b/index.html
@@ -284,10 +284,9 @@
         </div>
      </div>
     </div>
-
     <!-- Footer-section -->
      <div class="col-md-12">
-        <img src="/images/Footer.png" alt="">
+        <img class="foote-section" src="/images/Footer.png" alt="">
      </div>
      <!-- copyright -->
      <div class="col-md-12 bg-dark text-light d-flex justify-content-center">
